results/SVCOMP/4-shot/log-ExDarko-2024_03_18_16_22_46.txt
class MyInteger {
  int value;

  //@ ensures \result <==> obj == this;
  //@ ensures !\result <==> !(obj instanceof MyInteger) || this.value != ((MyInteger)obj).value;
  @Override
  public /*@ pure @*/ boolean equals(Object obj) {
    if (obj == this) {
      return true;
    }
    if (!(obj instanceof MyInteger)) {
      return false;
    }
    MyInteger other = (MyInteger) obj;
    return this.value == other.value;
  }
}
/home/max/Documents/JMLGPT/tmp/ExDarko.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result <==> !(obj instanceof MyInteger) || this.value != ((MyInteger)obj).value;
                                                               ^
/home/max/Documents/JMLGPT/tmp/ExDarko.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result <==> !(obj instanceof MyInteger) || this.value != ((MyInteger)obj).value;
                                                                                         ^
2 errors

